<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>


	<parent>
		<artifactId>maven-parent</artifactId>
		<groupId>org.gcube.tools</groupId>
		<version>1.0.0</version>
		<relativePath />
	</parent>

	<groupId>org.gcube.portlets.widgets</groupId>
	<artifactId>github-connector</artifactId>
	<version>1.4.0-4.6.0-148637</version>
	<packaging>jar</packaging>

	<description>github-connector</description>

	<scm>
		<url>https://svn.d4science.research-infrastructures.eu/gcube/trunk/portlets/widgets/github-connector</url>
	</scm>


	<developers>
		<developer>
			<name>Giancarlo Panichi</name>
			<email>g.panichi@isti.cnr.it</email>
			<organization>CNR Pisa, Istituto di Scienza e Tecnologie dell'Informazione "A. Faedo"</organization>
			<roles>
				<role>architect</role>
				<role>developer</role>
			</roles>
		</developer>
	</developers>

	<properties>
		<webappDirectory>${project.build.directory}/${project.build.finalName}</webappDirectory>
		<distroDirectory>distro</distroDirectory>
		<configDirectory>config</configDirectory>


		<!-- Java -->
		<maven.compiler.source>1.7</maven.compiler.source>


		<!-- GWT configuration -->
		<gwtVersion>2.7.0</gwtVersion>
		<gwtLogVersion>3.3.2</gwtLogVersion>

		<KEYS>${env.KEYS}</KEYS>

		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
	</properties>

	<profiles>
		<profile>
			<id>localRun</id>
			<dependencies>
				<!-- <dependency> <groupId>xerces</groupId> <artifactId>xercesImpl</artifactId> 
					<version>2.7.1</version> </dependency> -->
				<dependency>
					<groupId>org.slf4j</groupId>
					<artifactId>slf4j-api</artifactId>
					<scope>compile</scope>
				</dependency>
				<dependency>
					<groupId>org.slf4j</groupId>
					<artifactId>slf4j-log4j12</artifactId>
					<scope>runtime</scope>
				</dependency>

				<dependency>
					<groupId>xerces</groupId>
					<artifactId>xerces</artifactId>
					<version>2.4.0</version>
				</dependency>

				<!-- Storage -->
				<dependency>
					<groupId>org.gcube.contentmanagement</groupId>
					<artifactId>storage-manager-core</artifactId>
					<scope>runtime</scope>
				</dependency>
				<dependency>
					<groupId>org.gcube.contentmanagement</groupId>
					<artifactId>storage-manager-wrapper</artifactId>
					<scope>runtime</scope>
				</dependency>

				<!-- Home Library -->
				<dependency>
					<groupId>org.gcube.common</groupId>
					<artifactId>home-library</artifactId>
					<scope>runtime</scope>
				</dependency>
				<dependency>
					<groupId>org.gcube.common</groupId>
					<artifactId>home-library-jcr</artifactId>
					<scope>runtime</scope>
				</dependency>
				<dependency>
					<groupId>org.gcube.common</groupId>
					<artifactId>home-library-model</artifactId>
					<scope>runtime</scope>
				</dependency>

				<!-- Authorization -->
				<dependency>
					<groupId>org.gcube.common</groupId>
					<artifactId>common-authorization</artifactId>
					<scope>runtime</scope>
				</dependency>

				<dependency>
					<groupId>org.gcube.common</groupId>
					<artifactId>authorization-client</artifactId>
					<scope>runtime</scope>
				</dependency>


			</dependencies>
		</profile>
	</profiles>

	<dependencies>
		<!-- GWT -->
		<dependency>
			<groupId>com.google.gwt</groupId>
			<artifactId>gwt-user</artifactId>
			<version>${gwtVersion}</version>
		</dependency>

		<dependency>
			<groupId>com.google.gwt</groupId>
			<artifactId>gwt-servlet</artifactId>
			<version>${gwtVersion}</version>
		</dependency>


		<dependency>
			<groupId>javax.portlet</groupId>
			<artifactId>portlet-api</artifactId>
		</dependency>


		<!-- PORTAL -->
		<dependency>
			<groupId>org.gcube.core</groupId>
			<artifactId>common-scope-maps</artifactId>
			<scope>compile</scope>
		</dependency>

		<dependency>
			<groupId>org.gcube.common.portal</groupId>
			<artifactId>portal-manager</artifactId>
			<scope>provided</scope>
		</dependency>

		<dependency>
			<groupId>org.gcube.dvos</groupId>
			<artifactId>usermanagement-core</artifactId>
			<scope>provided</scope>
		</dependency>

		<dependency>
			<groupId>org.gcube.portal</groupId>
			<artifactId>client-context-library</artifactId>
			<version>1.0.0-4.6.0-134944</version>
			<scope>compile</scope>
		</dependency>

		<!-- Authorization -->
		<dependency>
			<groupId>org.gcube.common</groupId>
			<artifactId>common-authorization</artifactId>
			<scope>provided</scope>
		</dependency>

		<dependency>
			<groupId>org.gcube.common</groupId>
			<artifactId>authorization-client</artifactId>
			<scope>provided</scope>
		</dependency>

		<!-- GCube Widgets <dependency> <groupId>org.gcube.portlets.user</groupId> 
			<artifactId>gcube-widgets</artifactId> <scope>compile</scope> </dependency> -->


		<!-- Storage -->
		<dependency>
			<groupId>org.gcube.contentmanagement</groupId>
			<artifactId>storage-manager-core</artifactId>
			<scope>provided</scope>
		</dependency>

		<dependency>
			<groupId>org.gcube.contentmanagement</groupId>
			<artifactId>storage-manager-wrapper</artifactId>
			<scope>provided</scope>
		</dependency>

		<!-- Information System Client IC-Client <dependency> <groupId>org.gcube.resources.discovery</groupId> 
			<artifactId>ic-client</artifactId> </dependency> -->


		<!-- Home Library -->
		<dependency>
			<groupId>org.gcube.common</groupId>
			<artifactId>home-library</artifactId>
			<scope>provided</scope>
		</dependency>

		<dependency>
			<groupId>org.gcube.common</groupId>
			<artifactId>home-library-jcr</artifactId>
			<scope>provided</scope>
		</dependency>

		<dependency>
			<groupId>org.gcube.common</groupId>
			<artifactId>home-library-model</artifactId>
			<scope>provided</scope>
		</dependency>

		<!-- http://mvnrepository.com/artifact/org.eclipse.mylyn.github/org.eclipse.egit.github.core -->
		<dependency>
			<groupId>org.eclipse.mylyn.github</groupId>
			<artifactId>org.eclipse.egit.github.core</artifactId>
			<version>2.1.5</version>
		</dependency>


		<!-- http://mvnrepository.com/artifact/com.jcabi/jcabi-github -->
		<!-- <dependency> <groupId>com.jcabi</groupId> <artifactId>jcabi-github</artifactId> 
			<version>0.27</version> </dependency> -->

		<!-- http://mvnrepository.com/artifact/org.kohsuke/github-api -->
		<!-- <dependency> <groupId>org.kohsuke</groupId> <artifactId>github-api</artifactId> 
			<version>1.75</version> </dependency> -->

		<dependency>
			<groupId>org.ow2.asm</groupId>
			<artifactId>asm</artifactId>
			<version>5.0.4</version>
			<scope>provided</scope>
		</dependency>

		<!-- LOGGING -->
		<dependency>
			<groupId>com.allen-sauer.gwt.log</groupId>
			<artifactId>gwt-log</artifactId>
			<version>${gwtLogVersion}</version>
		</dependency>
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-api</artifactId>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-log4j12</artifactId>
			<scope>provided</scope>
		</dependency>

		<!-- JUnit TEST -->
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.8.1</version>
			<scope>test</scope>
		</dependency>


	</dependencies>




	<build>
		<!-- Generate compiled stuff in the folder used for developing mode -->
		<outputDirectory>${webappDirectory}/WEB-INF/classes</outputDirectory>

		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>2.16</version>
				<configuration>
					<skipTests>true</skipTests>
					<exclude>**/GwtTest*.java</exclude>

				</configuration>
				<!-- TODO check if needed -->
				<dependencies>
					<dependency>
						<groupId>org.apache.maven.surefire</groupId>
						<artifactId>surefire-junit47</artifactId>
						<version>2.16</version>
					</dependency>
				</dependencies>
			</plugin>

			<!-- GWT Maven Plugin -->
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>gwt-maven-plugin</artifactId>
				<version>${gwtVersion}</version>
				<executions>
					<execution>
						<configuration>
							<extraJvmArgs>-Xss512m -Xmx3072m -XX:MaxPermSize=2048m</extraJvmArgs>
						</configuration>
						<goals>
							<!-- <goal>test</goal> -->
							<goal>resources</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<runTarget>GitHubConnector.html</runTarget>
					<hostedWebapp>${webappDirectory}</hostedWebapp>
					<module>org.gcube.portlets.widgets.githubconnector.githubman</module>
					<includes>**/GwtTest*.java</includes>
				</configuration>
			</plugin>


			<!-- Copy static web files before executing gwt:run -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-war-plugin</artifactId>
				<version>2.1.1</version>
				<executions>
					<execution>
						<phase>compile</phase>
					</execution>
				</executions>
				<configuration>
					<webappDirectory>${webappDirectory}</webappDirectory>
					<warName>${project.build.finalName}</warName>
				</configuration>
			</plugin>




			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-assembly-plugin</artifactId>

				<configuration>
					<descriptors>
						<descriptor>${distroDirectory}/descriptor.xml</descriptor>
					</descriptors>
				</configuration>
				<executions>
					<execution>
						<id>servicearchive</id>
						<phase>install</phase>
						<goals>
							<goal>single</goal>
						</goals>
					</execution>
				</executions>
			</plugin>

		</plugins>
		<pluginManagement>
			<plugins>
				<!--This plugin's configuration is used to store Eclipse m2e settings 
					only. It has no influence on the Maven build itself. -->
				<plugin>
					<groupId>org.eclipse.m2e</groupId>
					<artifactId>lifecycle-mapping</artifactId>
					<version>1.0.0</version>
					<configuration>
						<lifecycleMappingMetadata>
							<pluginExecutions>
								<pluginExecution>
									<pluginExecutionFilter>
										<groupId>
											org.codehaus.mojo
										</groupId>
										<artifactId>
											gwt-maven-plugin
										</artifactId>
										<versionRange>
											[2.7.0,)
										</versionRange>
										<goals>
											<goal>resources</goal>
										</goals>
									</pluginExecutionFilter>
									<action>
										<ignore></ignore>
									</action>
								</pluginExecution>
							</pluginExecutions>
						</lifecycleMappingMetadata>
					</configuration>
				</plugin>
			</plugins>
		</pluginManagement>
	</build>

	<repositories>
		<repository>
			<id>gCubeExternal</id>
			<name>gcube-externals</name>
			<url>http://maven.research-infrastructures.eu/nexus/content/repositories/gcube-externals/</url>
		</repository>

	</repositories>



	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>org.gcube.distribution</groupId>
				<artifactId>maven-portal-bom</artifactId>
				<version>3.3.0-4.6.0-144184</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<name>github-connector</name>
</project>